// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/list/demo/basic.md correctly 1`] = `
<div
  class="ant-list ant-list-split"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="https://ant.design"
              >
                Ant Design Title 1
              </a>
            </h4>
            <div
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="https://ant.design"
              >
                Ant Design Title 2
              </a>
            </h4>
            <div
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="https://ant.design"
              >
                Ant Design Title 3
              </a>
            </h4>
            <div
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-meta"
        >
          <div
            class="ant-list-item-meta-avatar"
          >
            <span
              class="ant-avatar ant-avatar-circle ant-avatar-image"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
              />
            </span>
          </div>
          <div
            class="ant-list-item-meta-content"
          >
            <h4
              class="ant-list-item-meta-title"
            >
              <a
                href="https://ant.design"
              >
                Ant Design Title 4
              </a>
            </h4>
            <div
              class="ant-list-item-meta-description"
            >
              Ant Design, a design language for background applications, is refined by Ant UED Team
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/grid.md correctly 1`] = `
<div
  class="ant-list ant-list-split ant-list-grid"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-row"
        style="margin-left:-8px;margin-right:-8px"
      >
        <div
          class="ant-col-6"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 1
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-6"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 2
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-6"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 3
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-6"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 4
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/infinite-load.md correctly 1`] = `
<div
  class="demo-infinite-container"
>
  <div>
    <div
      class="ant-list ant-list-split"
    >
      <div
        class="ant-spin-nested-loading"
      >
        <div
          class="ant-spin-container"
        >
          <div
            class="ant-list-empty-text"
          >
            No data
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/infinite-virtualized-load.md correctly 1`] = `
<div
  class="ant-list ant-list-split"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    />
  </div>
</div>
`;

exports[`renders ./components/list/demo/loadmore.md correctly 1`] = `
<div
  class="ant-list demo-loadmore-list ant-list-split ant-list-loading"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div>
      <div
        class="ant-spin ant-spin-spinning"
      >
        <span
          class="ant-spin-dot ant-spin-dot-spin"
        >
          <i />
          <i />
          <i />
          <i />
        </span>
      </div>
    </div>
    <div
      class="ant-spin-container ant-spin-blur"
    >
      <div
        style="min-height:53px"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/resposive.md correctly 1`] = `
<div
  class="ant-list ant-list-split ant-list-grid"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-row"
        style="margin-left:-8px;margin-right:-8px"
      >
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 1
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 2
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 3
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 4
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 5
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-col-xs-24 ant-col-sm-12 ant-col-md-6 ant-col-lg-6 ant-col-xl-4 ant-col-xxl-8"
        >
          <div
            class="ant-list-item"
            style="padding-left:8px;padding-right:8px"
          >
            <div
              class="ant-list-item-content ant-list-item-content-single"
            >
              <div
                class="ant-card ant-card-bordered"
              >
                <div
                  class="ant-card-head"
                >
                  <div
                    class="ant-card-head-wrapper"
                  >
                    <div
                      class="ant-card-head-title"
                    >
                      Title 6
                    </div>
                  </div>
                </div>
                <div
                  class="ant-card-body"
                >
                  Card content
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/simple.md correctly 1`] = `
<div>
  <h3
    style="margin-bottom:16px"
  >
    Default Size
  </h3>
  <div
    class="ant-list ant-list-split ant-list-bordered ant-list-something-after-last-item"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Racing car sprays burning fuel into crowd.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Japanese princess to wed commoner.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Australian walks 100km after outback crash.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Man charged over missing wedding girl.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Los Angeles battles huge wildfires.
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
  <h3
    style="margin:16px 0"
  >
    Small Size
  </h3>
  <div
    class="ant-list ant-list-sm ant-list-split ant-list-bordered ant-list-something-after-last-item"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Racing car sprays burning fuel into crowd.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Japanese princess to wed commoner.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Australian walks 100km after outback crash.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Man charged over missing wedding girl.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Los Angeles battles huge wildfires.
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
  <h3
    style="margin:16px 0"
  >
    Large Size
  </h3>
  <div
    class="ant-list ant-list-lg ant-list-split ant-list-bordered ant-list-something-after-last-item"
  >
    <div
      class="ant-list-header"
    >
      <div>
        Header
      </div>
    </div>
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Racing car sprays burning fuel into crowd.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Japanese princess to wed commoner.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Australian walks 100km after outback crash.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Man charged over missing wedding girl.
          </div>
        </div>
        <div
          class="ant-list-item"
        >
          <div
            class="ant-list-item-content ant-list-item-content-single"
          >
            Los Angeles battles huge wildfires.
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-list-footer"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/list/demo/vertical.md correctly 1`] = `
<div
  class="ant-list ant-list-vertical ant-list-lg ant-list-split ant-list-something-after-last-item"
>
  <div
    class="ant-spin-nested-loading"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-extra-wrap"
        >
          <div
            class="ant-list-item-main"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image"
                >
                  <img
                    src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="http://ant.design"
                  >
                    ant design part 0
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team.
                </div>
              </div>
            </div>
            <div
              class="ant-list-item-content"
            >
              We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
            </div>
            <ul
              class="ant-list-item-action"
            >
              <li>
                <span>
                  <i
                    class="anticon anticon-star-o"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="star-o"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M512 136.1c5.3 0 10.7 2.8 13.4 8.5l104.5 222.7c2.1 4.5 6.3 7.6 11.1 8.3l234.9 35.9c11.9 1.8 16.7 16.3 8.3 24.9L713.4 611.5c-3.3 3.4-4.8 8.1-4 12.7l40.2 246.6c1.6 9.5-6 17.2-14.6 17.2-2.4 0-4.8-.6-7.1-1.9L519.1 770.7c-2.2-1.2-4.7-1.8-7.1-1.8s-4.9.6-7.1 1.8L296.1 886.1c-2.3 1.3-4.8 1.9-7.1 1.9-8.5 0-16.1-7.6-14.6-17.2l40.2-246.6c.8-4.6-.7-9.3-4-12.7L139.7 436.4c-8.4-8.6-3.5-23.1 8.3-24.9l235-35.9c4.9-.7 9-3.9 11.1-8.3l104.5-222.7c2.7-5.7 8.1-8.5 13.4-8.5m0-72c-15.9 0-31.4 4.3-44.9 12.5-14.7 8.9-26.3 21.8-33.6 37.4l-91.6 195-204.7 31.3c-32.3 4.9-58.8 27.2-69.2 58.2-10.4 31-2.6 64.7 20.2 88.1l150.7 154.5-35.6 218c-4.1 25.2 3 50.7 19.5 70.1 16.6 19.5 40.7 30.7 66.2 30.7 14.6 0 29.1-3.8 42-10.9l181-100 181 100.1c12.9 7.1 27.4 10.9 42 10.9 25.5 0 49.6-11.2 66.2-30.7 16.5-19.4 23.6-44.9 19.5-70.1l-35.6-218 150.7-154.5c22.8-23.4 30.5-57.1 20.2-88.1-10.4-31-36.9-53.3-69.2-58.2L682.1 309l-91.6-195c-7.3-15.6-18.9-28.5-33.6-37.4-13.5-8.2-29-12.5-44.9-12.5z"
                      />
                    </svg>
                  </i>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <i
                    class="anticon anticon-like-o"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="like-o"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M958.4 475.1l-.9-3c-.5-1.6-1-3-1.2-4-12.3-48.4-43-68.4-66.6-76.7-16-5.4-32.7-8.1-49.5-8.1h-.8c-29.2-.2-58.6-.2-87.9-.2-21.5 0-43 .1-64.1.1h-21.6c2.3-14 4.5-27.4 7.1-40.8 8.8-44.9 7.2-84.1-5.1-119.8-7.6-22.2-16.1-44.3-24.2-65.6-3-7.9-6-15.8-9-23.6-10.1-27-28.2-46.1-53.7-56.8-19.5-8.5-39.3-12.6-58.8-12.6-22.6 0-44.7 5.5-65.8 16.5-33.1 17.3-50.9 46.8-49.9 83.1.3 12 .6 24.3.8 36.2.4 20.2.8 41.1 1.7 61.7.3 3.4-.4 6.9-2.2 9.9-7.3 12.7-14.8 25.5-22 38.1-17.1 29.8-34.8 60.7-53.1 90-26.5 42.1-82.4 48.5-82.4 48.5H136c-39.8 0-72 32.2-72 72v368c0 39.8 32.2 72 72 72h247.3-.1 1.1c52.8 0 106.2-.2 159.2-.2 33.8 0 67.5.2 100.7.2h93.9c21.2 0 46.3-1.4 72-9.8 53.6-17.5 88.2-61.2 92.4-116.8 1.4-15.3.5-30.8-2.6-45.9 16.9-26.4 24.5-54.3 22.7-83.1-.6-8.2-2.1-16.4-4.4-24.3 16.1-24 23.8-49.7 23.1-76.6-.5-10-2.2-19.9-4.9-29.6 9.2-13.6 15.9-28.6 19.7-44.6l3.9-5.1v-44l-1.6-5.1zM248 888H136V520h112v368zm640-383.2l-1.9 7.8c-1.8 7.6-5 14.7-9.3 21.1l-18.9 27.9 9.3 32.4c1.2 4.1 1.9 8.4 2.2 12.7.2 11.5-3.3 22.2-10.9 33.5l-18.8 28 9.5 32.3c.9 2.9 1.4 5.9 1.6 8.9.7 13.2-3 26.1-11.6 39.4l-15.8 25 5.3 25.2H820h8.7l.8 3.4c1.7 8 2.2 16.2 1.4 24.3l-.1.6v.6c-1 13-5.1 24.2-12.3 33.3-7.3 9.2-17.6 16.3-30.6 20.5-16.1 5.3-33.4 6.2-49.7 6.2h-93.9c-16.5 0-33.1-.2-49.9-.2-16.9 0-33.8-.1-50.8-.1-47.6 0-103.7.3-159.4.3h-63.9l.8-387.7c30.4-14.8 54.9-36.1 71.5-62.4l.1-.2.1-.2c18.7-30 36.5-61 53.7-91l.7-1.1.1-.1.1-.1c4.5-7.9 9.3-16.2 13.9-24.2 2.6-4.5 5.2-8.9 7.7-13.3 9-15.3 13.1-32.7 11.9-50.3-.8-18.9-1.2-38.4-1.5-57.2v-1.7c-.3-13.7-.5-25.3-.8-36.8-.2-6.1 1.4-8.7 1.9-9.6 2-3.4 6.2-6.1 9.4-7.7 10.7-5.6 21.3-8.3 32.4-8.3 9.9 0 20.4 2.3 31.1 6.7 6 2.5 10.5 6 14.1 15.7 3 7.9 6.1 16 9.1 24 9 23.5 16.4 43.1 23.4 63.3 8 23.4 8.9 50.4 2.5 82.5-2.7 13.8-5 27.2-7.6 43.1L581.1 455h106.2c10.5 0 21.1 0 31.8-.1h32.3c25.8 0 56.3 0 87.3.3l.5-.1.5-.1h.4c8.8 0 17.5 1.5 25.9 4.2 7.9 2.9 15.8 8.3 20.4 26.4.5 2.1 1.6 4 1.6 5.6v13.6z"
                      />
                    </svg>
                  </i>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <i
                    class="anticon anticon-message"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="message"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M292.021 424.959c-30.397 0-54.994 24.597-54.994 54.994s24.697 54.995 54.994 54.995c30.397 0 54.995-24.598 54.995-54.995s-24.598-54.994-54.995-54.994zm439.957 0c-30.397 0-54.994 24.597-54.994 54.994s24.697 54.995 54.994 54.995 54.895-24.598 54.995-54.995c0-30.397-24.698-54.994-54.995-54.994zm-219.978 0c-30.397 0-54.995 24.597-54.995 54.994s24.698 54.995 54.995 54.995 54.994-24.598 54.994-54.995S542.297 424.96 512 424.96z"
                      />
                      <path
                        d="M983.354 291.871c-25.898-57.094-62.994-108.389-110.29-152.385-46.995-43.795-101.69-78.192-162.584-102.19C647.586 12.6 580.793 0 512 0c-68.794 0-135.587 12.599-198.48 37.296-60.895 23.998-115.59 58.395-162.585 102.19-47.195 43.996-84.292 95.191-110.29 152.385C13.749 351.266.05 414.36.05 479.353c0 116.889 45.095 228.678 127.187 316.27l23.098 196.58c1.4 11.999 8.7 22.498 19.498 27.897a35.79 35.79 0 0 0 16.199 3.9c6.099 0 12.298-1.6 17.798-4.7l148.285-84.291c51.395 15.798 105.09 23.797 159.785 23.797 68.793 0 135.587-12.598 198.48-37.296 60.894-23.998 115.59-58.394 162.584-102.19 47.196-43.996 84.292-95.19 110.29-152.385 26.997-59.394 40.596-122.388 40.596-187.482.1-65.093-13.599-128.187-40.496-187.582zM917.76 637.038c-21.998 48.395-53.495 91.99-93.79 129.487-40.397 37.596-87.492 67.194-139.987 87.892-54.495 21.497-112.39 32.296-172.083 32.296-52.295 0-103.59-8.399-152.185-24.997-9.8-3.3-20.498-2.3-29.398 2.8L215.43 929.809 197.23 775.124c-.9-7.999-4.5-15.398-10.099-21.098C112.94 678.834 72.043 581.243 72.043 479.353c0-54.694 11.499-107.69 34.196-157.684 21.998-48.396 53.495-91.991 93.791-129.488 40.396-37.596 87.492-67.193 139.987-87.891C394.41 82.892 452.306 71.993 512 71.993s117.588 10.899 172.083 32.297c52.495 20.698 99.59 50.195 139.986 87.891 40.196 37.497 71.793 80.992 93.791 129.488 22.698 49.995 34.197 102.99 34.197 157.684-.1 54.695-11.6 107.69-34.297 157.685z"
                      />
                    </svg>
                  </i>
                  2
                </span>
              </li>
            </ul>
          </div>
          <div
            class="ant-list-item-extra"
          >
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
              width="272"
            />
          </div>
        </div>
      </div>
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-extra-wrap"
        >
          <div
            class="ant-list-item-main"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image"
                >
                  <img
                    src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="http://ant.design"
                  >
                    ant design part 1
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team.
                </div>
              </div>
            </div>
            <div
              class="ant-list-item-content"
            >
              We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
            </div>
            <ul
              class="ant-list-item-action"
            >
              <li>
                <span>
                  <i
                    class="anticon anticon-star-o"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="star-o"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M512 136.1c5.3 0 10.7 2.8 13.4 8.5l104.5 222.7c2.1 4.5 6.3 7.6 11.1 8.3l234.9 35.9c11.9 1.8 16.7 16.3 8.3 24.9L713.4 611.5c-3.3 3.4-4.8 8.1-4 12.7l40.2 246.6c1.6 9.5-6 17.2-14.6 17.2-2.4 0-4.8-.6-7.1-1.9L519.1 770.7c-2.2-1.2-4.7-1.8-7.1-1.8s-4.9.6-7.1 1.8L296.1 886.1c-2.3 1.3-4.8 1.9-7.1 1.9-8.5 0-16.1-7.6-14.6-17.2l40.2-246.6c.8-4.6-.7-9.3-4-12.7L139.7 436.4c-8.4-8.6-3.5-23.1 8.3-24.9l235-35.9c4.9-.7 9-3.9 11.1-8.3l104.5-222.7c2.7-5.7 8.1-8.5 13.4-8.5m0-72c-15.9 0-31.4 4.3-44.9 12.5-14.7 8.9-26.3 21.8-33.6 37.4l-91.6 195-204.7 31.3c-32.3 4.9-58.8 27.2-69.2 58.2-10.4 31-2.6 64.7 20.2 88.1l150.7 154.5-35.6 218c-4.1 25.2 3 50.7 19.5 70.1 16.6 19.5 40.7 30.7 66.2 30.7 14.6 0 29.1-3.8 42-10.9l181-100 181 100.1c12.9 7.1 27.4 10.9 42 10.9 25.5 0 49.6-11.2 66.2-30.7 16.5-19.4 23.6-44.9 19.5-70.1l-35.6-218 150.7-154.5c22.8-23.4 30.5-57.1 20.2-88.1-10.4-31-36.9-53.3-69.2-58.2L682.1 309l-91.6-195c-7.3-15.6-18.9-28.5-33.6-37.4-13.5-8.2-29-12.5-44.9-12.5z"
                      />
                    </svg>
                  </i>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <i
                    class="anticon anticon-like-o"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="like-o"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M958.4 475.1l-.9-3c-.5-1.6-1-3-1.2-4-12.3-48.4-43-68.4-66.6-76.7-16-5.4-32.7-8.1-49.5-8.1h-.8c-29.2-.2-58.6-.2-87.9-.2-21.5 0-43 .1-64.1.1h-21.6c2.3-14 4.5-27.4 7.1-40.8 8.8-44.9 7.2-84.1-5.1-119.8-7.6-22.2-16.1-44.3-24.2-65.6-3-7.9-6-15.8-9-23.6-10.1-27-28.2-46.1-53.7-56.8-19.5-8.5-39.3-12.6-58.8-12.6-22.6 0-44.7 5.5-65.8 16.5-33.1 17.3-50.9 46.8-49.9 83.1.3 12 .6 24.3.8 36.2.4 20.2.8 41.1 1.7 61.7.3 3.4-.4 6.9-2.2 9.9-7.3 12.7-14.8 25.5-22 38.1-17.1 29.8-34.8 60.7-53.1 90-26.5 42.1-82.4 48.5-82.4 48.5H136c-39.8 0-72 32.2-72 72v368c0 39.8 32.2 72 72 72h247.3-.1 1.1c52.8 0 106.2-.2 159.2-.2 33.8 0 67.5.2 100.7.2h93.9c21.2 0 46.3-1.4 72-9.8 53.6-17.5 88.2-61.2 92.4-116.8 1.4-15.3.5-30.8-2.6-45.9 16.9-26.4 24.5-54.3 22.7-83.1-.6-8.2-2.1-16.4-4.4-24.3 16.1-24 23.8-49.7 23.1-76.6-.5-10-2.2-19.9-4.9-29.6 9.2-13.6 15.9-28.6 19.7-44.6l3.9-5.1v-44l-1.6-5.1zM248 888H136V520h112v368zm640-383.2l-1.9 7.8c-1.8 7.6-5 14.7-9.3 21.1l-18.9 27.9 9.3 32.4c1.2 4.1 1.9 8.4 2.2 12.7.2 11.5-3.3 22.2-10.9 33.5l-18.8 28 9.5 32.3c.9 2.9 1.4 5.9 1.6 8.9.7 13.2-3 26.1-11.6 39.4l-15.8 25 5.3 25.2H820h8.7l.8 3.4c1.7 8 2.2 16.2 1.4 24.3l-.1.6v.6c-1 13-5.1 24.2-12.3 33.3-7.3 9.2-17.6 16.3-30.6 20.5-16.1 5.3-33.4 6.2-49.7 6.2h-93.9c-16.5 0-33.1-.2-49.9-.2-16.9 0-33.8-.1-50.8-.1-47.6 0-103.7.3-159.4.3h-63.9l.8-387.7c30.4-14.8 54.9-36.1 71.5-62.4l.1-.2.1-.2c18.7-30 36.5-61 53.7-91l.7-1.1.1-.1.1-.1c4.5-7.9 9.3-16.2 13.9-24.2 2.6-4.5 5.2-8.9 7.7-13.3 9-15.3 13.1-32.7 11.9-50.3-.8-18.9-1.2-38.4-1.5-57.2v-1.7c-.3-13.7-.5-25.3-.8-36.8-.2-6.1 1.4-8.7 1.9-9.6 2-3.4 6.2-6.1 9.4-7.7 10.7-5.6 21.3-8.3 32.4-8.3 9.9 0 20.4 2.3 31.1 6.7 6 2.5 10.5 6 14.1 15.7 3 7.9 6.1 16 9.1 24 9 23.5 16.4 43.1 23.4 63.3 8 23.4 8.9 50.4 2.5 82.5-2.7 13.8-5 27.2-7.6 43.1L581.1 455h106.2c10.5 0 21.1 0 31.8-.1h32.3c25.8 0 56.3 0 87.3.3l.5-.1.5-.1h.4c8.8 0 17.5 1.5 25.9 4.2 7.9 2.9 15.8 8.3 20.4 26.4.5 2.1 1.6 4 1.6 5.6v13.6z"
                      />
                    </svg>
                  </i>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <i
                    class="anticon anticon-message"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="message"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M292.021 424.959c-30.397 0-54.994 24.597-54.994 54.994s24.697 54.995 54.994 54.995c30.397 0 54.995-24.598 54.995-54.995s-24.598-54.994-54.995-54.994zm439.957 0c-30.397 0-54.994 24.597-54.994 54.994s24.697 54.995 54.994 54.995 54.895-24.598 54.995-54.995c0-30.397-24.698-54.994-54.995-54.994zm-219.978 0c-30.397 0-54.995 24.597-54.995 54.994s24.698 54.995 54.995 54.995 54.994-24.598 54.994-54.995S542.297 424.96 512 424.96z"
                      />
                      <path
                        d="M983.354 291.871c-25.898-57.094-62.994-108.389-110.29-152.385-46.995-43.795-101.69-78.192-162.584-102.19C647.586 12.6 580.793 0 512 0c-68.794 0-135.587 12.599-198.48 37.296-60.895 23.998-115.59 58.395-162.585 102.19-47.195 43.996-84.292 95.191-110.29 152.385C13.749 351.266.05 414.36.05 479.353c0 116.889 45.095 228.678 127.187 316.27l23.098 196.58c1.4 11.999 8.7 22.498 19.498 27.897a35.79 35.79 0 0 0 16.199 3.9c6.099 0 12.298-1.6 17.798-4.7l148.285-84.291c51.395 15.798 105.09 23.797 159.785 23.797 68.793 0 135.587-12.598 198.48-37.296 60.894-23.998 115.59-58.394 162.584-102.19 47.196-43.996 84.292-95.19 110.29-152.385 26.997-59.394 40.596-122.388 40.596-187.482.1-65.093-13.599-128.187-40.496-187.582zM917.76 637.038c-21.998 48.395-53.495 91.99-93.79 129.487-40.397 37.596-87.492 67.194-139.987 87.892-54.495 21.497-112.39 32.296-172.083 32.296-52.295 0-103.59-8.399-152.185-24.997-9.8-3.3-20.498-2.3-29.398 2.8L215.43 929.809 197.23 775.124c-.9-7.999-4.5-15.398-10.099-21.098C112.94 678.834 72.043 581.243 72.043 479.353c0-54.694 11.499-107.69 34.196-157.684 21.998-48.396 53.495-91.991 93.791-129.488 40.396-37.596 87.492-67.193 139.987-87.891C394.41 82.892 452.306 71.993 512 71.993s117.588 10.899 172.083 32.297c52.495 20.698 99.59 50.195 139.986 87.891 40.196 37.497 71.793 80.992 93.791 129.488 22.698 49.995 34.197 102.99 34.197 157.684-.1 54.695-11.6 107.69-34.297 157.685z"
                      />
                    </svg>
                  </i>
                  2
                </span>
              </li>
            </ul>
          </div>
          <div
            class="ant-list-item-extra"
          >
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
              width="272"
            />
          </div>
        </div>
      </div>
      <div
        class="ant-list-item"
      >
        <div
          class="ant-list-item-extra-wrap"
        >
          <div
            class="ant-list-item-main"
          >
            <div
              class="ant-list-item-meta"
            >
              <div
                class="ant-list-item-meta-avatar"
              >
                <span
                  class="ant-avatar ant-avatar-circle ant-avatar-image"
                >
                  <img
                    src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
                  />
                </span>
              </div>
              <div
                class="ant-list-item-meta-content"
              >
                <h4
                  class="ant-list-item-meta-title"
                >
                  <a
                    href="http://ant.design"
                  >
                    ant design part 2
                  </a>
                </h4>
                <div
                  class="ant-list-item-meta-description"
                >
                  Ant Design, a design language for background applications, is refined by Ant UED Team.
                </div>
              </div>
            </div>
            <div
              class="ant-list-item-content"
            >
              We supply a series of design principles, practical patterns and high quality design resources (Sketch and Axure), to help people create their product prototypes beautifully and efficiently.
            </div>
            <ul
              class="ant-list-item-action"
            >
              <li>
                <span>
                  <i
                    class="anticon anticon-star-o"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="star-o"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M512 136.1c5.3 0 10.7 2.8 13.4 8.5l104.5 222.7c2.1 4.5 6.3 7.6 11.1 8.3l234.9 35.9c11.9 1.8 16.7 16.3 8.3 24.9L713.4 611.5c-3.3 3.4-4.8 8.1-4 12.7l40.2 246.6c1.6 9.5-6 17.2-14.6 17.2-2.4 0-4.8-.6-7.1-1.9L519.1 770.7c-2.2-1.2-4.7-1.8-7.1-1.8s-4.9.6-7.1 1.8L296.1 886.1c-2.3 1.3-4.8 1.9-7.1 1.9-8.5 0-16.1-7.6-14.6-17.2l40.2-246.6c.8-4.6-.7-9.3-4-12.7L139.7 436.4c-8.4-8.6-3.5-23.1 8.3-24.9l235-35.9c4.9-.7 9-3.9 11.1-8.3l104.5-222.7c2.7-5.7 8.1-8.5 13.4-8.5m0-72c-15.9 0-31.4 4.3-44.9 12.5-14.7 8.9-26.3 21.8-33.6 37.4l-91.6 195-204.7 31.3c-32.3 4.9-58.8 27.2-69.2 58.2-10.4 31-2.6 64.7 20.2 88.1l150.7 154.5-35.6 218c-4.1 25.2 3 50.7 19.5 70.1 16.6 19.5 40.7 30.7 66.2 30.7 14.6 0 29.1-3.8 42-10.9l181-100 181 100.1c12.9 7.1 27.4 10.9 42 10.9 25.5 0 49.6-11.2 66.2-30.7 16.5-19.4 23.6-44.9 19.5-70.1l-35.6-218 150.7-154.5c22.8-23.4 30.5-57.1 20.2-88.1-10.4-31-36.9-53.3-69.2-58.2L682.1 309l-91.6-195c-7.3-15.6-18.9-28.5-33.6-37.4-13.5-8.2-29-12.5-44.9-12.5z"
                      />
                    </svg>
                  </i>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <i
                    class="anticon anticon-like-o"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="like-o"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M958.4 475.1l-.9-3c-.5-1.6-1-3-1.2-4-12.3-48.4-43-68.4-66.6-76.7-16-5.4-32.7-8.1-49.5-8.1h-.8c-29.2-.2-58.6-.2-87.9-.2-21.5 0-43 .1-64.1.1h-21.6c2.3-14 4.5-27.4 7.1-40.8 8.8-44.9 7.2-84.1-5.1-119.8-7.6-22.2-16.1-44.3-24.2-65.6-3-7.9-6-15.8-9-23.6-10.1-27-28.2-46.1-53.7-56.8-19.5-8.5-39.3-12.6-58.8-12.6-22.6 0-44.7 5.5-65.8 16.5-33.1 17.3-50.9 46.8-49.9 83.1.3 12 .6 24.3.8 36.2.4 20.2.8 41.1 1.7 61.7.3 3.4-.4 6.9-2.2 9.9-7.3 12.7-14.8 25.5-22 38.1-17.1 29.8-34.8 60.7-53.1 90-26.5 42.1-82.4 48.5-82.4 48.5H136c-39.8 0-72 32.2-72 72v368c0 39.8 32.2 72 72 72h247.3-.1 1.1c52.8 0 106.2-.2 159.2-.2 33.8 0 67.5.2 100.7.2h93.9c21.2 0 46.3-1.4 72-9.8 53.6-17.5 88.2-61.2 92.4-116.8 1.4-15.3.5-30.8-2.6-45.9 16.9-26.4 24.5-54.3 22.7-83.1-.6-8.2-2.1-16.4-4.4-24.3 16.1-24 23.8-49.7 23.1-76.6-.5-10-2.2-19.9-4.9-29.6 9.2-13.6 15.9-28.6 19.7-44.6l3.9-5.1v-44l-1.6-5.1zM248 888H136V520h112v368zm640-383.2l-1.9 7.8c-1.8 7.6-5 14.7-9.3 21.1l-18.9 27.9 9.3 32.4c1.2 4.1 1.9 8.4 2.2 12.7.2 11.5-3.3 22.2-10.9 33.5l-18.8 28 9.5 32.3c.9 2.9 1.4 5.9 1.6 8.9.7 13.2-3 26.1-11.6 39.4l-15.8 25 5.3 25.2H820h8.7l.8 3.4c1.7 8 2.2 16.2 1.4 24.3l-.1.6v.6c-1 13-5.1 24.2-12.3 33.3-7.3 9.2-17.6 16.3-30.6 20.5-16.1 5.3-33.4 6.2-49.7 6.2h-93.9c-16.5 0-33.1-.2-49.9-.2-16.9 0-33.8-.1-50.8-.1-47.6 0-103.7.3-159.4.3h-63.9l.8-387.7c30.4-14.8 54.9-36.1 71.5-62.4l.1-.2.1-.2c18.7-30 36.5-61 53.7-91l.7-1.1.1-.1.1-.1c4.5-7.9 9.3-16.2 13.9-24.2 2.6-4.5 5.2-8.9 7.7-13.3 9-15.3 13.1-32.7 11.9-50.3-.8-18.9-1.2-38.4-1.5-57.2v-1.7c-.3-13.7-.5-25.3-.8-36.8-.2-6.1 1.4-8.7 1.9-9.6 2-3.4 6.2-6.1 9.4-7.7 10.7-5.6 21.3-8.3 32.4-8.3 9.9 0 20.4 2.3 31.1 6.7 6 2.5 10.5 6 14.1 15.7 3 7.9 6.1 16 9.1 24 9 23.5 16.4 43.1 23.4 63.3 8 23.4 8.9 50.4 2.5 82.5-2.7 13.8-5 27.2-7.6 43.1L581.1 455h106.2c10.5 0 21.1 0 31.8-.1h32.3c25.8 0 56.3 0 87.3.3l.5-.1.5-.1h.4c8.8 0 17.5 1.5 25.9 4.2 7.9 2.9 15.8 8.3 20.4 26.4.5 2.1 1.6 4 1.6 5.6v13.6z"
                      />
                    </svg>
                  </i>
                  156
                </span>
                <em
                  class="ant-list-item-action-split"
                />
              </li>
              <li>
                <span>
                  <i
                    class="anticon anticon-message"
                    style="margin-right:8px"
                  >
                    <svg
                      aria-hidden="true"
                      class=""
                      data-icon="message"
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 1024 1024"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M292.021 424.959c-30.397 0-54.994 24.597-54.994 54.994s24.697 54.995 54.994 54.995c30.397 0 54.995-24.598 54.995-54.995s-24.598-54.994-54.995-54.994zm439.957 0c-30.397 0-54.994 24.597-54.994 54.994s24.697 54.995 54.994 54.995 54.895-24.598 54.995-54.995c0-30.397-24.698-54.994-54.995-54.994zm-219.978 0c-30.397 0-54.995 24.597-54.995 54.994s24.698 54.995 54.995 54.995 54.994-24.598 54.994-54.995S542.297 424.96 512 424.96z"
                      />
                      <path
                        d="M983.354 291.871c-25.898-57.094-62.994-108.389-110.29-152.385-46.995-43.795-101.69-78.192-162.584-102.19C647.586 12.6 580.793 0 512 0c-68.794 0-135.587 12.599-198.48 37.296-60.895 23.998-115.59 58.395-162.585 102.19-47.195 43.996-84.292 95.191-110.29 152.385C13.749 351.266.05 414.36.05 479.353c0 116.889 45.095 228.678 127.187 316.27l23.098 196.58c1.4 11.999 8.7 22.498 19.498 27.897a35.79 35.79 0 0 0 16.199 3.9c6.099 0 12.298-1.6 17.798-4.7l148.285-84.291c51.395 15.798 105.09 23.797 159.785 23.797 68.793 0 135.587-12.598 198.48-37.296 60.894-23.998 115.59-58.394 162.584-102.19 47.196-43.996 84.292-95.19 110.29-152.385 26.997-59.394 40.596-122.388 40.596-187.482.1-65.093-13.599-128.187-40.496-187.582zM917.76 637.038c-21.998 48.395-53.495 91.99-93.79 129.487-40.397 37.596-87.492 67.194-139.987 87.892-54.495 21.497-112.39 32.296-172.083 32.296-52.295 0-103.59-8.399-152.185-24.997-9.8-3.3-20.498-2.3-29.398 2.8L215.43 929.809 197.23 775.124c-.9-7.999-4.5-15.398-10.099-21.098C112.94 678.834 72.043 581.243 72.043 479.353c0-54.694 11.499-107.69 34.196-157.684 21.998-48.396 53.495-91.991 93.791-129.488 40.396-37.596 87.492-67.193 139.987-87.891C394.41 82.892 452.306 71.993 512 71.993s117.588 10.899 172.083 32.297c52.495 20.698 99.59 50.195 139.986 87.891 40.196 37.497 71.793 80.992 93.791 129.488 22.698 49.995 34.197 102.99 34.197 157.684-.1 54.695-11.6 107.69-34.297 157.685z"
                      />
                    </svg>
                  </i>
                  2
                </span>
              </li>
            </ul>
          </div>
          <div
            class="ant-list-item-extra"
          >
            <img
              alt="logo"
              src="https://gw.alipayobjects.com/zos/rmsportal/mqaQswcyDLcXyDKnZfES.png"
              width="272"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-list-footer"
  >
    <div>
      <b>
        ant design
      </b>
       footer part
    </div>
  </div>
  <div
    class="ant-list-pagination"
  >
    <ul
      class="ant-pagination "
      unselectable="unselectable"
    >
      <li
        aria-disabled="true"
        class="ant-pagination-disabled ant-pagination-prev"
        title="Previous Page"
      >
        <a
          class="ant-pagination-item-link"
        >
          <i
            class="anticon anticon-left"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="left"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M724.4 895.7c-9.6 0-19.3-3.2-27.4-9.6L273.2 545.2c-10.3-8.3-16.3-20.8-16.3-34.1 0-13.2 6-25.8 16.3-34l422-339.1c18.8-15.1 46.3-12.1 61.4 6.7 15.1 18.8 12.1 46.3-6.7 61.4l-379.6 305L751.8 818c18.8 15.1 21.8 42.6 6.7 61.4-8.7 10.7-21.3 16.3-34.1 16.3z"
              />
            </svg>
          </i>
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
        tabindex="0"
        title="1"
      >
        <a>
          1
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-2"
        tabindex="0"
        title="2"
      >
        <a>
          2
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-3"
        tabindex="0"
        title="3"
      >
        <a>
          3
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-4"
        tabindex="0"
        title="4"
      >
        <a>
          4
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-5"
        tabindex="0"
        title="5"
      >
        <a>
          5
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-6"
        tabindex="0"
        title="6"
      >
        <a>
          6
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-7"
        tabindex="0"
        title="7"
      >
        <a>
          7
        </a>
      </li>
      <li
        class="ant-pagination-item ant-pagination-item-8"
        tabindex="0"
        title="8"
      >
        <a>
          8
        </a>
      </li>
      <li
        aria-disabled="false"
        class=" ant-pagination-next"
        tabindex="0"
        title="Next Page"
      >
        <a
          class="ant-pagination-item-link"
        >
          <i
            class="anticon anticon-right"
          >
            <svg
              aria-hidden="true"
              class=""
              data-icon="right"
              fill="currentColor"
              height="1em"
              viewBox="0 0 1024 1024"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M300.6 895.7c9.6 0 19.3-3.2 27.4-9.6l423.8-340.9c10.3-8.3 16.3-20.8 16.3-34.1 0-13.2-6-25.8-16.3-34L329.8 138c-18.8-15.1-46.3-12.1-61.4 6.7-15.1 18.8-12.1 46.3 6.7 61.4l379.6 305.1L273.2 818c-18.8 15.1-21.8 42.6-6.7 61.4 8.7 10.7 21.3 16.3 34.1 16.3z"
              />
            </svg>
          </i>
        </a>
      </li>
    </ul>
  </div>
</div>
`;
